# bcrhp

./: .coveragerc  .gitignore  .prettierrc  Dockerfile  MANIFEST.in  README.md  components.d.ts  docker-compose.yml  dot.env.j2  eslint.config.mjs  index.html  manage.py  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  schema.yml  tsconfig.json  vite.config.mjs  vitest.config.mts
.github/: github_env
.github/actions/build-and-test-branch/: action.yml
.github/actions/run-release-prep-script/: action.yml  release_prep.py
.github/workflows/: main.yml  release_deploy.yml  release_deploy_common.yml  release_prep.yml  release_prep_common.yml
bcrhp/: __init__.py  apps.py  permission_settings.py  settings.py  urls.py  urls_api_documented.py  urls_api_generated.py
bcrhp/datatypes/: borden_number_datatype.py
bcrhp/management/commands/: historic_places_test_users.py
bcrhp/media/css/: output.css  project.css  tailwind_output.css
bcrhp/media/img/: CopyrightNotice.txt
bcrhp/media/js/: arches_esm.js
bcrhp/media/js/reports/: bcrhp-site.js  default.js
bcrhp/media/js/utils/: map-configurator.js  map-popup-provider.js  resource-geom-callback-factory.js  set-csrf-token_esm.js
bcrhp/media/js/viewmodels/: bcrhp-site.js  map-editor.js
bcrhp/media/js/views/: root.js  root_vue.js
bcrhp/migrations/: 0001_initial_pre_package.py  0002_load_package.py  0003_create_databc_proxy_role.py  0003_post_package_load.py  0057_drop_983_backup_tables.py  0065_add_plugin_config.py  0127_remove_sample_widget.py  0129_drop_1034_backup_tables.py  0186_remove_permission_functions.py  0206_guest_no_access_admin_nodegroups.py  0226_add_activatemax_config_key.py  0231_add_concept_rerender_config_key.py  0232_remove_map_rerender_config_key.py  947_create_testing_table.py
bcrhp/migrations/sql/2024/: 2024-01-22__bcrhp_build_image_caption.sql  2024-01-22__bcrhp_crhp_data_vw.sql  2024-02-29_01__mv_borden_number.sql  2024-02-29_02__bc_get_utm_easting.sql  2024-02-29_02__bc_get_utm_northing.sql  2024-02-29_02__bc_get_utm_srid.sql  2024-02-29_02__bc_get_utm_zone.sql  2024-02-29_02__mv_site_names.sql  2024-02-29_03__mv_bc_statement_of_significance.sql  2024-02-29_04__mv_property_address.sql  2024-02-29_05__mv_legal_description.sql  2024-02-29_06__mv_bc_right.sql  2024-02-29_07__mv_government.sql  2024-02-29_08__mv_protection_event.sql  2024-02-29_09__mv_site_protection_event.sql  2024-02-29_10__mv_chronology.sql  2024-02-29_11__mv_site_record_admin.sql  2024-02-29_12__mv_heritage_function.sql  2024-02-29_13__mv_construction_actors.sql  2024-11-29_mv_bc_right.sql  (+20 more)
bcrhp/permissions/: bcrhp_default_deny.py
bcrhp/releases/: setup_vite.md
bcrhp/rest_framework/: permissions.py
bcrhp/src/: index.html  root.js  root_vue.js
bcrhp/src/bcrhp/: App.vue  api.test.ts  api.ts  constants.ts  declarations.d.ts  routes.ts  types.ts  utils.test.ts  utils.ts
bcrhp/templates/: arches_urls.htm  index.htm
bcrhp/templates/bcrhp/: root.htm  root_vue_dev.htm
bcrhp/templates/views/: search.htm
bcrhp/tests/: dev.env
bcrhp/util/: bcap_borden_number_api.py  borden_number_api.py  buisiness_permission_manager.py  context_processors.py  hria_db.py  pkg_util.py
bcrhp/views/: api.py  relatable_resources.py  root.py
bcrhp/views/workflows/: heritage_site_submissions.py
bcrhp_utils/: 2024-04-18_validate_urls.py
cd/config/: default.yml  dlvr.yml  prod.yml  test.yml
cd/docker/: build_container.sh  run_deployment.sh
cd/docker/config/: app_env  instance_env
cd/docker/files/: local_vars.yml
docker/: README.md  docker.dev.env  entrypoint.sh  env_file.env
docker/nginx/: dev.conf
docker/production/: entrypoint.sh
docker/webpack/: Dockerfile
docs/: docker.md
notebooks/: JUPYTER.md
notebooks/exploration/: bcrhp_guardian_nodegroup_updates.ipynb  check_cnw_config.ipynb
releases/: 1.4.0.md  1.4.1.md  setup_vite.md  v8_ugrapde.md
test-results/: .last-run.json
tests/: dev.env  github_settings.py  test_settings.py
tests/playwright/: README.md  package.json  playwright.config.ts  run_test.sh
tests/playwright/python/: .gitignore  conftest.py  requirements.txt
tests/playwright/test/: area.shp  test_to_review_page.spec.ts
tests/playwright/tests/: polygon.geojson  polygon.kml  polygon.shp  test_submission_errors.spec.ts  test_to_review_page.spec.ts  test_to_spatial.spec.ts
tests/playwrite/: README.md
tests/playwrite/tests/: test_to_spatial.spec.ts
tests/search_indexes/: sample_index_tests.py
tests/util/: context_processors_tests.py  pkg_util_tests.py  storage_filename_generator_tests.py
tests/views/workflows/: test_heritage_site_submissions.py
webpack/: webpack.common.js
webpack/webpack-utils/: build-filepath-lookup.js
(+92 files in other folders)
