[build-system]
requires = ["setuptools>=77", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bcrhp"
readme = "README.md"
authors = []
license = {text = "GNU AGPL3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
requires-python = ">=3.11"
dependencies = [
    "arches @ git+https://github.com/bcgov/arches@stable/8.0.10_bcgov_12578_12377_12616",
    "bcgov-arches-common @ git+https://github.com/bcgov/bcgov-arches-common@dev/2.0.x_merge_1.3.0",
    "arches-querysets[drf] @ git+https://github.com/archesproject/arches-querysets@dev/1.1.x",
    "arches-component-lab @ git+https://github.com/archesproject/arches-component-lab@main",
    "django-storages==1.13",
    "python-dotenv",
    "html2text",
    "oracledb",
]

version = "1.4.0"

[dependency-groups]
dev = [
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black==24.4.2",
    "django-vite",
]

[tool.setuptools]
packages = ["bcrhp"]
