[build-system]
requires = [ "setuptools>=77", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "bcrhp"
version = "1.4.0a3"
readme = "README.md"
requires-python = ">=3.11"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "arches @ git+https://github.com/bcgov/arches@stable/8.0.10_bcgov_12578_12377_12616",
    "arches-component-lab @ git+https://github.com/archesproject/arches-component-lab@main",
    "arches-querysets[drf] @ git+https://github.com/archesproject/arches-querysets@dev/1.1.x",
    "bcgov-arches-common @ git+https://github.com/bcgov/bcgov-arches-common@dev/2.0.x_merge_1.3.0",
    "django-storages==1.13",
    "html2text",
    "oracledb",
    "python-dotenv",
]
dynamic = []

[project.license]
text = "GNU AGPL3"

[tool.setuptools]
packages = [ "bcrhp",]

[dependency-groups]
dev = [
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black==24.4.2",
    "django-vite",
]
