[build-system]
requires = [ "setuptools>=77", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "bcrhp"
version = "1.4.2"
readme = "README.md"
requires-python = ">=3.11"
authors = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "arches @ git+https://github.com/bcgov/arches@v8.0.10-bcgov",
    "arches-component-lab @ git+https://github.com/bcgov/arches-component-lab@v0.0.1a13-bcgov",
    "arches-querysets[drf] @ git+https://github.com/bcgov/arches-querysets@v1.1.1-bcgov",
    "bcgov-arches-common @ git+https://github.com/bcgov/bcgov-arches-common@release/2.0.1",
    "django-storages==1.13",
    "html2text",
    "oracledb",
    "python-dotenv",
]
dynamic = []

[project.license]
text = "GNU AGPL3"

[tool.setuptools]
packages = [ "bcrhp",]

[dependency-groups]
dev = [
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black>=26.3.1",
    "django-vite",
]
jupyter = [
    { include-group = "dev" },
    "ipykernel",
    "jupyterlab",
    "pandas",
    "matplotlib",
    "seaborn",
    "tabulate",
    "openpyxl",
    "nbstripout",
]
